@@ -1,3 +1,10 @@
+2002-09-18  Theodore A. Roth  <troth@verinet.com>
+
+        * gdb/avr-tdep.c(avr_scan_prologue): Fix bad call to 
+	generic_read_register_dummy() (PR gdb/703).
+	(avr_push_return_address): #if 0 out unused vars.
+	(avr_gdbarch_init): Enable use of avr_push_return_address().
+
 2002-09-18  Michal Ludvig  <mludvig@suse.cz>
 
 	* x86-64-linux-nat.c (x86_64_regmap): Added CS and SS
